--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,8 @@
 ARG VARIANT=1-20-bullseye
 FROM mcr.microsoft.com/devcontainers/typescript-node:${VARIANT}
 RUN apt-get update
+# Crear directorio de la aplicación
+WORKDIR /app-dir
 RUN su node -c "npm install -g npm@10.7.0"
 RUN su node -c "npm install -g @angular/cli@17.3.6"
 RUN su node -c "npm install -g nx@18.3.4"
