--- a/project/package.json
+++ b/project/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "~17.3.0",
     "@nx/angular": "18.3.4",
     "express": "~4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -37,12 +39,22 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "~17.3.0",
     "@angular/language-service": "~17.3.0",
+    "@nrwl/storybook": "^18.3.4",
     "@nx/eslint": "18.3.4",
     "@nx/eslint-plugin": "18.3.4",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
+    "@nx/storybook": "18.3.4",
+    "@nx/web": "18.3.4",
     "@nx/workspace": "18.3.4",
     "@schematics/angular": "~17.3.0",
+    "@storybook/addon-essentials": "8.0.9",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/angular": "^8.0.9",
+    "@storybook/core-server": "8.0.9",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -58,6 +70,7 @@
     "jest-preset-angular": "~14.0.3",
     "nx": "18.3.4",
     "prettier": "^2.6.2",
+    "storybook": "8.0.9",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2"
