crear libreria de storybook

--- a/project/nx.json
+++ b/project/nx.json
@@ -44,6 +44,9 @@
           "codeCoverage": true
         }
       }
+    },
+    "build-storybook": {
+      "cache": true
     }
   },
   "generators": {
