--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,8 @@
         "ms-azuretools.vscode-docker",
         "dbaeumer.vscode-eslint",
         "mhutchie.git-graph",
-        "ms-vscode-remote.remote-containers"
+        "ms-vscode-remote.remote-containers",
+        "firsttris.vscode-jest-runner"
       ]
     }
   }
