--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~17.3.0",
     "@angular/ssr": "~17.3.0",
     "@nx/angular": "18.3.4",
+    "events": "^3.3.0",
     "express": "~4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,7 +50,7 @@
     "@nx/workspace": "18.3.4",
     "@schematics/angular": "~17.3.0",
     "@storybook/addon-essentials": "8.0.9",
-    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-interactions": "^8.0.9",
     "@storybook/angular": "^8.0.9",
     "@storybook/core-server": "8.0.9",
     "@storybook/jest": "^0.2.3",
