--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@project/story": ["story/src/index.ts"]
+      "@project/story": ["story/src/index.ts"],
+      "@project/storybook-host": ["libs/storybook-host/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
