Crear primer componente

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,4 +8,5 @@ RUN su node -c "npm install -g @angular/cli@17.3.6"
 RUN su node -c "npm install -g nx@18.3.4"
 EXPOSE 4200
 EXPOSE 6006
+EXPOSE 4400
 CMD ["ng", "ng serve", "--host", "0.0.0.0", "npx", "nx"]
