--- a/project/libs/storybook-host/project.json
+++ b/project/libs/storybook-host/project.json
@@ -15,7 +15,10 @@
         "port": 4400,
         "configDir": "libs/storybook-host/.storybook",
         "browserTarget": "storybook-host:build-storybook",
-        "compodoc": false
+        "compodoc": false,
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+        ]
       },
       "configurations": {
         "ci": {
@@ -30,7 +33,10 @@
         "outputDir": "dist/storybook/storybook-host",
         "configDir": "libs/storybook-host/.storybook",
         "browserTarget": "storybook-host:build-storybook",
-        "compodoc": false
+        "compodoc": false,
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+        ]
       },
       "configurations": {
         "ci": {
