--- a/project/package.json
+++ b/project/package.json
@@ -24,7 +24,7 @@
     "@angular/ssr": "~17.3.0",
     "@nx/angular": "18.3.4",
     "events": "^3.3.0",
-    "express": "~4.18.2",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
@@ -55,7 +55,7 @@
     "@storybook/angular": "^8.0.9",
     "@storybook/core-server": "8.0.9",
     "@storybook/jest": "^0.2.3",
-    "@storybook/test-runner": "^0.13.0",
+    "@storybook/test-runner": "^0.17.0",
     "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
